package com.eventsystem.domain.company;

public enum Permission {
    EVENT_INVENTORY_MANAGEMENT,
    VENUE_CONFIGURATION,
    MODIFY_POLICIES,
    VIEW_PURCHASE_HISTORY,
    GENERATE_SALES_REPORT
}
